--- a/src/layouts/Layout.module.scss
+++ b/src/layouts/Layout.module.scss
@@ -6,7 +6,7 @@
 
 .body {
   padding: 0 1em;
-  padding-top: 4rem;
+  padding-top: 2rem;
 
   a {
     color: $blue;
